--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "register-service-worker": "^1.7.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-plugin-eslint": "^3.12.1",
+    "@vue/cli-plugin-pwa": "^4.3.1",
     "@vue/cli-service": "^3.12.1",
     "@vue/eslint-config-standard": "^4.0.0",
     "babel-eslint": "^10.0.3",
@@ -24,6 +26,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "node-sass": "^4.14.0",
     "sass-loader": "^7.3.1",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "vue-template-compiler": "^2.6.10"
   }
 }
