--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "register-service-worker": "^1.7.1",
+    "tailwindcss": "^1.4.6",
     "vue": "^2.6.10",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
